--- a/ddm-lmp/src/main/resources/application.conf
+++ b/ddm-lmp/src/main/resources/application.conf
@@ -43,8 +43,8 @@ akka {
     artery {
       enabled = on
       transport = tcp
-      canonical.hostname = "localhost"
-      canonical.port = 2551
+      canonical.hostname = "127.0.0.1"
+      canonical.port = 7877
       large-message-destinations = [
         "/user/*/largeMessageProxy",
         "/user/**/largeMessageProxy"
