Send hash messages over large message channel. Improve some TODOs / comments

--- a/ddm-pc/src/main/resources/application.conf
+++ b/ddm-pc/src/main/resources/application.conf
@@ -47,7 +47,9 @@ akka {
       canonical.port = 2551
       large-message-destinations = [
         "/user/*/largeMessageProxy",
-        "/user/**/largeMessageProxy"
+        "/user/**/largeMessageProxy",
+        "/user/*/largeMessages",
+        "/user/**/largeMessages",
       ]
     }
   }
